Changelog
=========

3.2a2 - UNRELEASED
------------------

- Include missing dependency on plone.app.locales.
  [hannosch]

- Fixed the toc.js to not turn heading text containing an "@" into the link.
  Closes http://dev.plone.org/plone/ticket/7949
  [sbruno, calvinhp]

- Fixed the form_tabbing to use the correct buttons names. Closes
  http://dev.plone.org/plone/ticket/7559
  [lucie, calvinhp]

- Gave RTL.css higher priority within the stylesheet registry.
  Closes http://dev.plone.org/plone/ticket/8505
  [emanlove]

- For RTL languages shifted Info Bar to the right.
  Closes http://dev.plone.org/plone/ticket/8140
  [emanlove]

- For RTL languages shifted comment icon to the right.
  Closes http://dev.plone.org/plone/ticket/6366
  [emanlove]

3.2a1 - October 11, 2008
------------------------

- Take getNotAddableTypes into account when determining if the editable
  border should be shown.
  [wichert]

- First fully eggified Plone release (ignoring the not yet eggified
  Zope2).
  [wichert]


3.1.6 - October 7, 2008
-----------------------

- PloneTool.reindexOnReorder: Don't fail if the catalog contains stale
  entries.
  [stefan]

- Fixed the silent fail of the group membership from a user via the
  prefs_user_memberships form. This closes 
  http://dev.plone.org/plone/ticket/8468
  [garbas, calvinhp]

- Fixed the migration from 3.0.1 to 3.0.2 to now put back the actionicons
  for the languages control panel. 
  This closes http://dev.plone.org/plone/ticket/7901
  [KurtB, calvinhp]

- Changed isIDAutoGenerated to work with types that have .'s in them in the
  case that namespaces are included in the type's portal_type. For example:
  collective.types.ExternalSearch (to pick one from the collective). This
  closes http://dev.plone.org/plone/ticket/8480.
  [pbugni,dunlapm]

- Changed prefs_group_members.pt search table to behave coherently with
  prefs_users_overview.pt, including the results header only when 
  there are results to show.
  [igbun]
