@@ -7,6 +7,12 @@ Changelog
 - Include missing dependency on plone.app.locales.
   [hannosch]
 
+- Moved plone specific diff tool configuration back to Plone default
+  profile, since it's both plone specific and was never actually added
+  to CMFDiffTool.
+  Closes http://dev.plone.org/plone/ticket/8590
+  [alecm]
+
 - Fixed the toc.js to not turn heading text containing an "@" into the link.
   Closes http://dev.plone.org/plone/ticket/7949
   [sbruno, calvinhp]
